NCP Object Storage 업로드 기능 개발 완료

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>File Upload</h1>
-<form method="post" th:action="@{/upload}" enctype="multipart/form-data">
-    <input type="file" name="files" multiple />
+<form method="post" action="upload" enctype="multipart/form-data">
+    <input type="file" name="file" multiple />
     <input type="submit" value="Submit" />
 </form>
 </body>
