--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>File Upload</h1>
-<form method="post" action="upload" enctype="multipart/form-data">
+<form method="post" th:action="@{/upload}" enctype="multipart/form-data">
     <input type="file" name="file" multiple />
     <input type="submit" value="Submit" />
 </form>
